Added bottom menu of location and change maps

--- a/beattyFrame/DataSource/supporting_data.plist
+++ b/beattyFrame/DataSource/supporting_data.plist
@@ -34,7 +34,7 @@
 	</dict>
 	<dict>
 		<key>image</key>
-		<string>residential.png</string>
+		<string>grfx_ecoDistrict.jpg</string>
 		<key>title</key>
 		<string>Eco-District</string>
 	</dict>
