--- a/beattyFrame/Info.plist
+++ b/beattyFrame/Info.plist
@@ -40,5 +40,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>GoodPro-Book.otf</string>
+		<string>GoodPro-CondBook.otf</string>
+	</array>
 </dict>
 </plist>
