Added intro movie

--- a/beattyFrame/Info.plist
+++ b/beattyFrame/Info.plist
@@ -27,14 +27,14 @@
 		<string>GoodPro-Book.otf</string>
 		<string>GoodPro-CondBook.otf</string>
 	</array>
-	<key>UILaunchStoryboardName</key>
-	<string>Main</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>UIStatusBarHidden~ipad</key>
+	<true/>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
