Building Model Implemented

--- a/beattyFrame/DataSource/building_data.plist
+++ b/beattyFrame/DataSource/building_data.plist
@@ -3,112 +3,112 @@
 <plist version="1.0">
 <array>
 	<dict>
-		<key>image</key>
+		<key>buildingImage</key>
 		<string>Parcel_01.jpg</string>
-		<key>title</key>
-		<string>History</string>
-		<key>siteplan</key>
+		<key>buildingTitle</key>
+		<string>Parcel 1</string>
+		<key>buildingSite</key>
 		<string>siteplan_01.png</string>
-		<key>caption</key>
+		<key>buildingSiteCaption</key>
 		<string>View from NW</string>
-		<key>galleryname</key>
+		<key>buildingGallery</key>
 		<string>gallery name</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>buildingImage</key>
 		<string>Thames_Street_Wharf.jpg</string>
-		<key>title</key>
-		<string>Trends</string>
-        <key>siteplan</key>
-        <string>siteplan_01.png</string>
-        <key>caption</key>
-        <string>View from NW</string>
-        <key>galleryname</key>
-        <string>gallery name</string>
+		<key>buildingTitle</key>
+		<string>Thames Street Wharf</string>
+		<key>buildingSite</key>
+		<string>siteplan_02.png</string>
+		<key>buildingSiteCaption</key>
+		<string>View from NE</string>
+		<key>buildingGallery</key>
+		<string>gallery name</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>buildingImage</key>
 		<string>Parcel_02-Excelon.jpg</string>
-		<key>title</key>
-		<string>Trends</string>
-        <key>siteplan</key>
-        <string>siteplan_01.png</string>
-        <key>caption</key>
-        <string>View from NW</string>
-        <key>galleryname</key>
-        <string>gallery name</string>
+		<key>buildingTitle</key>
+		<string>Excelon</string>
+		<key>buildingSite</key>
+		<string>siteplan_03.png</string>
+		<key>buildingSiteCaption</key>
+		<string>View from SW</string>
+		<key>buildingGallery</key>
+		<string>gallery name</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>buildingImage</key>
 		<string>Central_Plaza.jpg</string>
-		<key>title</key>
-		<string>Trends</string>
-        <key>siteplan</key>
-        <string>siteplan_01.png</string>
-        <key>caption</key>
-        <string>View from NW</string>
-        <key>galleryname</key>
-        <string>gallery name</string>
+		<key>buildingTitle</key>
+		<string>Central Plaza</string>
+		<key>buildingSite</key>
+		<string>siteplan_04.png</string>
+		<key>buildingSiteCaption</key>
+		<string>View from E</string>
+		<key>buildingGallery</key>
+		<string>gallery name</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>buildingImage</key>
 		<string>Point_Street_Apt.jpg</string>
-		<key>title</key>
-		<string>Trends</string>
-        <key>siteplan</key>
-        <string>siteplan_01.png</string>
-        <key>caption</key>
-        <string>View from NW</string>
-        <key>galleryname</key>
-        <string>gallery name</string>
+		<key>buildingTitle</key>
+		<string>Point Street Apt.</string>
+		<key>buildingSite</key>
+		<string>siteplan_05.png</string>
+		<key>buildingSiteCaption</key>
+		<string>View from SE</string>
+		<key>buildingGallery</key>
+		<string>gallery name</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>buildingImage</key>
 		<string>Parcel_04.jpg</string>
-		<key>title</key>
-		<string>Trends</string>
-        <key>siteplan</key>
-        <string>siteplan_01.png</string>
-        <key>caption</key>
-        <string>View from NW</string>
-        <key>galleryname</key>
-        <string>gallery name</string>
+		<key>buildingTitle</key>
+		<string>Parcel 4</string>
+		<key>buildingSite</key>
+		<string>siteplan_06.png</string>
+		<key>buildingSiteCaption</key>
+		<string>View from SW</string>
+		<key>buildingGallery</key>
+		<string>gallery name</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>buildingImage</key>
 		<string>Wills_Street_Wharf.jpg</string>
-		<key>title</key>
-		<string>Trends</string>
-        <key>siteplan</key>
-        <string>siteplan_01.png</string>
-        <key>caption</key>
-        <string>View from NW</string>
-        <key>galleryname</key>
-        <string>gallery name</string>
+		<key>buildingTitle</key>
+		<string>Wills Street Wharf</string>
+		<key>buildingSite</key>
+		<string>siteplan_07.png</string>
+		<key>buildingSiteCaption</key>
+		<string>View from S</string>
+		<key>buildingGallery</key>
+		<string>gallery name</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>buildingImage</key>
 		<string>Harbor_Point_Park.jpg</string>
-		<key>title</key>
-		<string>Trends</string>
-        <key>siteplan</key>
-        <string>siteplan_01.png</string>
-        <key>caption</key>
-        <string>View from NW</string>
-        <key>galleryname</key>
-        <string>gallery name</string>
+		<key>buildingTitle</key>
+		<string>Harbor Point Park</string>
+		<key>buildingSite</key>
+		<string>siteplan_08.png</string>
+		<key>buildingSiteCaption</key>
+		<string>View from W</string>
+		<key>buildingGallery</key>
+		<string>gallery name</string>
 	</dict>
 	<dict>
-		<key>image</key>
+		<key>buildingImage</key>
 		<string>Parcel_03.jpg</string>
-		<key>title</key>
-		<string>Trends</string>
-        <key>siteplan</key>
-        <string>siteplan_01.png</string>
-        <key>caption</key>
-        <string>View from NW</string>
-        <key>galleryname</key>
-        <string>gallery name</string>
+		<key>buildingTitle</key>
+		<string>Parcel 3</string>
+		<key>buildingSite</key>
+		<string>siteplan_09.png</string>
+		<key>buildingSiteCaption</key>
+		<string>View from N</string>
+		<key>buildingGallery</key>
+		<string>gallery name</string>
 	</dict>
 </array>
 </plist>
