--- a/beattyFrame/DataSource/building_data.plist
+++ b/beattyFrame/DataSource/building_data.plist
@@ -13,6 +13,10 @@
 		<string>View from NW</string>
 		<key>buildingGallery</key>
 		<string>gallery name</string>
+		<key>buildingStats</key>
+		<string>grfx_bldg_stats_01.png</string>
+		<key>buildingWeb</key>
+		<string>http://1305dockstreet.com</string>
 	</dict>
 	<dict>
 		<key>buildingImage</key>
@@ -25,6 +29,8 @@
 		<string>View from SW</string>
 		<key>buildingGallery</key>
 		<string>gallery name</string>
+		<key>buildingStats</key>
+		<string>grfx_bldg_stats_02.png</string>
 	</dict>
 	<dict>
 		<key>buildingImage</key>
@@ -37,6 +43,10 @@
 		<string>View from SW</string>
 		<key>buildingGallery</key>
 		<string>gallery name</string>
+		<key>buildingStats</key>
+		<string>grfx_bldg_stats_03.png</string>
+		<key>buildingWeb</key>
+		<string>http://1305dockstreet.com</string>
 	</dict>
 	<dict>
 		<key>buildingImage</key>
@@ -49,6 +59,8 @@
 		<string>View from SE</string>
 		<key>buildingGallery</key>
 		<string>gallery name</string>
+		<key>buildingStats</key>
+		<string>grfx_bldg_stats_04.png</string>
 	</dict>
 	<dict>
 		<key>buildingImage</key>
@@ -61,6 +73,10 @@
 		<string>View from NE</string>
 		<key>buildingGallery</key>
 		<string>gallery name</string>
+		<key>buildingStats</key>
+		<string>grfx_bldg_stats_05.png</string>
+		<key>buildingWeb</key>
+		<string>http://www.neoscape.com</string>
 	</dict>
 	<dict>
 		<key>buildingImage</key>
@@ -73,6 +89,8 @@
 		<string>View from S</string>
 		<key>buildingGallery</key>
 		<string>gallery name</string>
+		<key>buildingStats</key>
+		<string>grfx_bldg_stats_06.png</string>
 	</dict>
 	<dict>
 		<key>buildingImage</key>
@@ -85,6 +103,10 @@
 		<string>View from N</string>
 		<key>buildingGallery</key>
 		<string>gallery name</string>
+		<key>buildingStats</key>
+		<string>grfx_bldg_stats_07.png</string>
+		<key>buildingWeb</key>
+		<string>http://1305dockstreet.com</string>
 	</dict>
 	<dict>
 		<key>buildingImage</key>
@@ -97,6 +119,8 @@
 		<string>View from W</string>
 		<key>buildingGallery</key>
 		<string>gallery name</string>
+		<key>buildingStats</key>
+		<string>grfx_bldg_stats_08.png</string>
 	</dict>
 	<dict>
 		<key>buildingImage</key>
@@ -109,6 +133,10 @@
 		<string>View from E</string>
 		<key>buildingGallery</key>
 		<string>gallery name</string>
+		<key>buildingStats</key>
+		<string>grfx_bldg_stats_09.png</string>
+		<key>buildingWeb</key>
+		<string>http://1305dockstreet.com</string>
 	</dict>
 </array>
 </plist>
