Added Building List, some new bus and maps / ui

--- a/beattyFrame/DataSource/colors.plist
+++ b/beattyFrame/DataSource/colors.plist
@@ -68,6 +68,7 @@
 				<string>RGB A 255 255 1  255</string>
 				<string>RGB A 136 0 0  255</string>
 				<string>RGB A 0 136 0  255</string>
+				<string>RGB A 0 136 0  255</string>
 				<string>RGB A 104 216 130  255</string>
 				<string>RGB A 0 138 122  255</string>
 				<string>RGB A 0 79 50  255</string>
@@ -80,6 +81,7 @@
 				<string>RGB A 255 255 1  255</string>
 				<string>RGB A 255 255 1  255</string>
 				<string>RGB A 0 136 0  255</string>
+				<string>RGB A 0 136 0  255</string>
 				<string>RGB A 104 216 130  255</string>
 				<string>RGB A 0 138 122  255</string>
 				<string>RGB A 0 79 50  255</string>
@@ -91,6 +93,7 @@
 			<array>
 				<string>RGB A 255 255 1  255</string>
 				<string>RGB A 136 0 0  255</string>
+				<string>RGB A 0 136 0  255</string>
 				<string>RGB A 0 136 0  255</string>
 				<string>RGB A 104 216 130  255</string>
 				<string>RGB A 0 138 122  255</string>
