--- a/beattyFrame/DataSource/building_data.plist
+++ b/beattyFrame/DataSource/building_data.plist
@@ -34,6 +34,20 @@
 	</dict>
 	<dict>
 		<key>buildingImage</key>
+		<string>1305-DockSt.jpg</string>
+		<key>buildingTitle</key>
+		<string>1305 Dock Street</string>
+		<key>buildingSite</key>
+		<string>siteplan_10.png</string>
+		<key>buildingSiteCaption</key>
+		<string>View from SW</string>
+		<key>buildingGallery</key>
+		<string>gallery name</string>
+		<key>buildingStats</key>
+		<string>parcel-panel-dock-st.png</string>
+	</dict>
+	<dict>
+		<key>buildingImage</key>
 		<string>Parcel_04.jpg</string>
 		<key>buildingTitle</key>
 		<string>Parcel 4</string>
