Updated assets, removed corp neighbors

--- a/beattyFrame/DataSource/sponsorship_data.plist
+++ b/beattyFrame/DataSource/sponsorship_data.plist
@@ -4,7 +4,7 @@
 <array>
 	<dict>
 		<key>image</key>
-		<string>sponsorship_00.png</string>
+		<string>grfx-partners.png</string>
 		<key>title</key>
 		<string>History</string>
 		<key>webaddress</key>
