Overlays, button adjustments, bug fixes, lydia bugs, bldg data

--- a/beattyFrame/DataSource/building_data.plist
+++ b/beattyFrame/DataSource/building_data.plist
@@ -22,7 +22,7 @@
 		<key>buildingImage</key>
 		<string>Parcel_02-Excelon.jpg</string>
 		<key>buildingTitle</key>
-		<string>Excelon</string>
+		<string>Exelon</string>
 		<key>buildingSite</key>
 		<string>siteplan_03.png</string>
 		<key>buildingSiteCaption</key>
