WIP Supporting Stories

--- a/beattyFrame/DataSource/supporting_data.plist
+++ b/beattyFrame/DataSource/supporting_data.plist
@@ -2,35 +2,165 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
-	<dict>
-		<key>image</key>
-		<string>supporting-stories-urban-renaissance.png</string>
-		<key>title</key>
-		<string>Urban Renaissance</string>
-	</dict>
-	<dict>
-		<key>image</key>
-		<string>supporting-stories-getting-to-work.png</string>
-		<key>title</key>
-		<string>Getting To Work</string>
-	</dict>
-	<dict>
-		<key>image</key>
-		<string>supporting-stories-thriving-baltimore.png</string>
-		<key>title</key>
-		<string>Thriving Baltimore</string>
-	</dict>
-	<dict>
-		<key>image</key>
-		<string>supporting-stories-cultural-hub.png</string>
-		<key>title</key>
-		<string>Cultural Hub</string>
-	</dict>
-	<dict>
-		<key>image</key>
-		<string>supporting-stories-eco-district.png</string>
-		<key>title</key>
-		<string>Eco-District</string>
-	</dict>
+	<array>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-urban-renaissance.png</string>
+			<key>title</key>
+			<string>Urban Renaissance A</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-getting-to-work.png</string>
+			<key>title</key>
+			<string>Getting To Work</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-thriving-baltimore.png</string>
+			<key>title</key>
+			<string>Thriving Baltimore</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-cultural-hub.png</string>
+			<key>title</key>
+			<string>Cultural Hub</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-eco-district.png</string>
+			<key>title</key>
+			<string>Eco-District</string>
+		</dict>
+	</array>
+	<array>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-urban-renaissance.png</string>
+			<key>title</key>
+			<string>Urban Renaissance B</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-getting-to-work.png</string>
+			<key>title</key>
+			<string>Getting To Work</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-thriving-baltimore.png</string>
+			<key>title</key>
+			<string>Thriving Baltimore</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-cultural-hub.png</string>
+			<key>title</key>
+			<string>Cultural Hub</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-eco-district.png</string>
+			<key>title</key>
+			<string>Eco-District</string>
+		</dict>
+	</array>
+	<array>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-urban-renaissance.png</string>
+			<key>title</key>
+			<string>Urban Renaissance C</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-getting-to-work.png</string>
+			<key>title</key>
+			<string>Getting To Work</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-thriving-baltimore.png</string>
+			<key>title</key>
+			<string>Thriving Baltimore</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-cultural-hub.png</string>
+			<key>title</key>
+			<string>Cultural Hub</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-eco-district.png</string>
+			<key>title</key>
+			<string>Eco-District</string>
+		</dict>
+	</array>
+	<array>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-urban-renaissance.png</string>
+			<key>title</key>
+			<string>Urban Renaissance D</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-getting-to-work.png</string>
+			<key>title</key>
+			<string>Getting To Work</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-thriving-baltimore.png</string>
+			<key>title</key>
+			<string>Thriving Baltimore</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-cultural-hub.png</string>
+			<key>title</key>
+			<string>Cultural Hub</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-eco-district.png</string>
+			<key>title</key>
+			<string>Eco-District</string>
+		</dict>
+	</array>
+	<array>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-urban-renaissance.png</string>
+			<key>title</key>
+			<string>Urban Renaissance E</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-getting-to-work.png</string>
+			<key>title</key>
+			<string>Getting To Work</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-thriving-baltimore.png</string>
+			<key>title</key>
+			<string>Thriving Baltimore</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-cultural-hub.png</string>
+			<key>title</key>
+			<string>Cultural Hub</string>
+		</dict>
+		<dict>
+			<key>image</key>
+			<string>supporting-stories-eco-district.png</string>
+			<key>title</key>
+			<string>Eco-District</string>
+		</dict>
+	</array>
 </array>
 </plist>
