--- a/beattyFrame/DataSource/supporting_data.plist
+++ b/beattyFrame/DataSource/supporting_data.plist
@@ -5,7 +5,7 @@
 	<array>
 		<dict>
 			<key>image</key>
-			<string>supporting-stories-urban-renaissance.png</string>
+			<string>sup-stories-1-1.jpg</string>
 			<key>source</key>
 			<string>supporting-stories-getting-to-work.png</string>
 			<key>title</key>
@@ -13,35 +13,31 @@
 		</dict>
 		<dict>
 			<key>image</key>
-			<string>supporting-stories-getting-to-work.png</string>
+			<string>sup-stories-1-2.jpg</string>
 			<key>title</key>
 			<string>Getting To Work</string>
 		</dict>
 		<dict>
 			<key>image</key>
-			<string>supporting-stories-thriving-baltimore.png</string>
+			<string>sup-stories-1-3.jpg</string>
 			<key>title</key>
 			<string>Thriving Baltimore</string>
 		</dict>
-	</array>
-	<array>
 		<dict>
 			<key>image</key>
-			<string>supporting-stories-thriving-baltimore.png</string>
+			<string>sup-stories-1-4.jpg</string>
 			<key>title</key>
 			<string>Urban Renaissance B</string>
 		</dict>
-	</array>
-	<array>
 		<dict>
 			<key>image</key>
-			<string>supporting-stories-cultural-hub.png</string>
+			<string>sup-stories-1-5.jpg</string>
 			<key>title</key>
 			<string>Cultural Hub</string>
 		</dict>
 		<dict>
 			<key>image</key>
-			<string>supporting-stories-eco-district.png</string>
+			<string>sup-stories-1-6.jpg</string>
 			<key>title</key>
 			<string>Eco-District</string>
 		</dict>
@@ -49,25 +45,26 @@
 	<array>
 		<dict>
 			<key>image</key>
-			<string>supporting-stories-getting-to-work.png</string>
+			<string>sup-stories-2.jpg</string>
 			<key>title</key>
 			<string>Getting To Work</string>
+			<key>buildingWeb</key>
+			<array>
+				<string>http://www.1305DockStreet.com</string>
+				<string>http://www.1405Point.com</string>
+			</array>
 		</dict>
+	</array>
+	<array>
 		<dict>
 			<key>image</key>
-			<string>supporting-stories-thriving-baltimore.png</string>
-			<key>title</key>
-			<string>Thriving Baltimore</string>
-		</dict>
-		<dict>
-			<key>image</key>
-			<string>supporting-stories-cultural-hub.png</string>
+			<string>sup-stories-3-1.jpg</string>
 			<key>title</key>
 			<string>Cultural Hub</string>
 		</dict>
 		<dict>
 			<key>image</key>
-			<string>supporting-stories-eco-district.png</string>
+			<string>sup-stories-3-2.jpg</string>
 			<key>title</key>
 			<string>Eco-District</string>
 		</dict>
@@ -75,21 +72,17 @@
 	<array>
 		<dict>
 			<key>image</key>
-			<string>supporting-stories-urban-renaissance.png</string>
-			<key>title</key>
-			<string>Urban Renaissance E</string>
-		</dict>
-		<dict>
-			<key>image</key>
-			<string>supporting-stories-getting-to-work.png</string>
+			<string>sup-stories-4.jpg</string>
 			<key>title</key>
 			<string>Getting To Work</string>
 		</dict>
+	</array>
+	<array>
 		<dict>
 			<key>image</key>
-			<string>supporting-stories-thriving-baltimore.png</string>
+			<string>sup-stories-5.jpg</string>
 			<key>title</key>
-			<string>Thriving Baltimore</string>
+			<string>Getting To Work</string>
 		</dict>
 	</array>
 </array>
