--- a/beattyFrame/DataSource/sponsorship_data.plist
+++ b/beattyFrame/DataSource/sponsorship_data.plist
@@ -15,7 +15,7 @@
 	</dict>
 	<dict>
 		<key>image</key>
-		<string>grfx-jll.jpg</string>
+		<string>grfx-partners-jll.png</string>
 		<key>title</key>
 		<string>History</string>
 		<key>webaddress</key>
