--- a/beattyFrame/DataSource/sponsorship_data.plist
+++ b/beattyFrame/DataSource/sponsorship_data.plist
@@ -25,7 +25,7 @@
 	</dict>
 	<dict>
 		<key>image</key>
-		<string>grfx-klnb.jpg</string>
+		<string>grfx-partners-klnb.png</string>
 		<key>title</key>
 		<string>History</string>
 		<key>webaddress</key>
