Key and plans updated

--- a/beattyFrame/DataSource/shareableData copy.plist
+++ b/beattyFrame/DataSource/shareableData copy.plist
@@ -9,37 +9,58 @@
 		<array>
 			<dict>
 				<key>albumtype</key>
-				<string>pdf</string>
+				<string>image</string>
 				<key>albumthumb</key>
-				<string></string>
+				<string>thumb_3D.jpg</string>
 				<key>albumcaption</key>
-				<string></string>
+				<string>AAC Visitors Profile</string>
 				<key>assets</key>
 				<array>
+					<string>Central_Plaza.jpg</string>
+					<string>Harbor_Point_Park.jpg</string>
+					<string>Parcel_01.jpg</string>
+					<string>Parcel_02-Excelon.jpg</string>
+					<string>Parcel_03.jpg</string>
+					<string>Parcel_04.jpg</string>
+					<string>Point_Street_Apt.jpg</string>
+					<string>Thames_Street_Wharf.jpg</string>
+					<string>Wills_Street_Wharf.jpg</string>
+					<string>Neoscape_BeattyDevelopment_Aerial02_FINAL.jpg</string>
+					<string>Neoscape_BeattyDevelopment_HarborView_FINAL.jpg</string>
+					<string>Neoscape_BeattyDevelopment_Aerial01_FINAL.jpg</string>
 					<string>BeattyDev@gmail.com_20150521_084823.pdf</string>
-					<string>Harbor Point 2.0_sml.pdf</string>
-					<string>Harbor Point 2.0-4.pdf</string>
-					<string>Harbor Point 2.0.pdf</string>
-					<string>Harbor_Point_Leasing_Brochure_sml.pdf</string>
-					<string>Point Street_UDARP 03_01-21-15 AM Mod_sml.pdf</string>
 				</array>
 				<key>thumbs</key>
 				<array>
-					<string>share_BeattyDev@gmail.com_20150521_084823.jpg</string>
-					<string>share_Harbor Point 2.0_sml.jpg</string>
-					<string>share_Harbor Point 2.0-4.jpg</string>
-					<string>share_Harbor Point 2.0.jpg</string>
-					<string>share_Harbor_Point_Leasing_Brochure_sml.jpg</string>
-					<string>share_Point Street_UDARP 03_01-21-15 AM Mod_sml.jpg</string>
+					<string>share_Central_Plaza.jpg</string>
+					<string>share_Harbor_Point_Park.jpg</string>
+					<string>share_Parcel_01.jpg</string>
+					<string>share_Parcel_02-Excelon.jpg</string>
+					<string>share_Parcel_03.jpg</string>
+					<string>share_Parcel_04.jpg</string>
+					<string>share_Point_Street_Apt.jpg</string>
+					<string>share_Thames_Street_Wharf.jpg</string>
+					<string>share_Wills_Street_Wharf.jpg</string>
+					<string>share_Wills_Street_Wharf.jpg</string>
+					<string>share_Wills_Street_Wharf.jpg</string>
+					<string>share_Wills_Street_Wharf.jpg</string>
+					<string>parks.jpg</string>
 				</array>
 				<key>captions</key>
 				<array>
-					<string>BeattyDev@gmail.com_20150521_084823.pdf</string>
-					<string>Harbor Point 2.0_sml.pdf</string>
-					<string>Harbor Point 2.0-4.pdf</string>
-					<string>Harbor Point 2.0.pdf</string>
-					<string>Harbor_Point_Leasing_Brochure_sml.pdf</string>
-					<string>Point Street_UDARP 03_01-21-15 AM Mod_sml.pdf</string>
+					<string>Central Plaza</string>
+					<string>Harbor Point Park</string>
+					<string>Parcel 01</string>
+					<string>Parcel 02 - Exelon</string>
+					<string>Parcel 03</string>
+					<string>Parcel 04</string>
+					<string>1405 Point</string>
+					<string>Thames Street Wharf</string>
+					<string>Wills Wharf</string>
+					<string>Aerial</string>
+					<string>Harbor View</string>
+					<string>Aerial</string>
+					<string>pdf</string>
 				</array>
 			</dict>
 		</array>
